// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flashcard does not render an action when onFlashcardDeleted is null 1`] = `
<withTheme(Card)
  style={
    Object {
      "marginVertical": 4,
    }
  }
>
  <Card.Content
    style={
      Object {
        "paddingTop": 16,
      }
    }
  />
</withTheme(Card)>
`;

exports[`Flashcard renders properly 1`] = `
<withTheme(Card)
  style={
    Object {
      "marginVertical": 4,
    }
  }
>
  <Styled(Card.Actions)>
    <withTheme(IconButton)
      color="#6200ee"
      icon="close"
      onPress={[MockFunction]}
      style={
        Object {
          "marginVertical": 0,
        }
      }
    />
  </Styled(Card.Actions)>
  <Card.Content
    style={null}
  />
</withTheme(Card)>
`;
